Extrair logica de negocio para camada de Service no backend
Refatoracao da arquitetura do backend: logica que estava embutida
nos controllers foi extraida para classes de servico dedicadas.

Servicos criados/atualizados:
- AtividadeService, AuthService, MedicamentoService, PerfilService
- RegistroSaudeService, RelatorioMensalService, UsuarioService
- VisitaService, IdosoService

Melhorias adicionais:
- @Transactional nas operacoes de escrita (cadastrar, atualizar, excluir)
- @Transactional(readOnly=true) nas consultas para otimizacao
- Controllers agora apenas delegam para o servico correspondente

Fecha #20